--- a/index.html
+++ b/index.html
@@ -1,16 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simon game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-    <h1>This gemini response</h1>
-    <input type="text" placeholder="Enter prompt">
-    <button class="btn">submit</button>
-    <div class="a"></div>
+<body>
+    <div class="main">
+        <div class="outer">
+
+            <div class="inner">
+
+                <nav class="menu">
+                    <img src="momsplay logo.png" alt="Momsplay" class="logo">
+                </nav>
+                <h1>Simon Game</h1>
+                <h2>Press any keyword to start game</h2>
+                <div class="rows">
+                    <div class="first_row">
+                        <div class="button1 brown btn" id="brown"></div>
+                        <div class="button2 yellow btn" id="yellow"></div>
+                    </div>
+                    <div class="second_row">
+                        <div class="button3 orange btn" id="orange"></div>
+                        <div class="button4 grey btn" id="grey"></div>
+
+                    </div>
+
+                </div>
+
+                <div class="game_rule">
+                    <h1>Game Rules</h1>
+                    <ul>
+                        <li><strong>Start the Game:</strong> Press any key on your keyboard to begin the game.</li>
+                        <li><strong>Watch the Sequence:</strong> The game will show you a sequence of colors. Pay close
+                            attention and remember the order!</li>
+                        <li><strong>Repeat the Sequence:</strong> Click on the buttons to repeat the same sequence of
+                            colors in the exact order shown.</li>
+                        <li><strong>Level Up:</strong> If you get the sequence right, you move to the next level, and
+                            the game adds one more color to the sequence.</li>
+                        <li><strong>Game Over:</strong> If you press the wrong color, the game ends. To play again,
+                            press any key to restart.</li>
+                    </ul>
+
+                    <div class="example">
+                        <strong>Example:</strong>
+                        <ul>
+                            <li><strong>Level 1:</strong> The game flashes Yellow. You click the Yellow button. ✅</li>
+                            <li><strong>Level 2:</strong> The game flashes Yellow → Orange. You click Yellow, then
+                                Orange. ✅</li>
+                            <li><strong>Level 3:</strong> The game flashes Yellow → Orange → Grey. You click Yellow,
+                                Orange, and Grey. ✅</li>
+                            <li><strong>Level 4:</strong> The game flashes Yellow → Orange → Grey → Brown. You click
+                                Yellow, Orange, Grey, but then click the wrong button. ❌</li>
+                        </ul>
+                        <p><strong>Result:</strong> Game Over! The game resets, and you can start again by pressing any
+                            key.</p>
+                    </div>
+                </div>
+                <div class="pop-up">
+                    kldfjkdsjfskldj
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    </div>
     <script src="app.js"></script>
 </body>
+
 </html>
