adding clipboard and modify some other component

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rizz lines</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -15,10 +16,10 @@
             <div class="inner">
 
                 <nav class="menu">
-                    <img src="rizz_lines_generator-removebg-preview.png" alt="Momsplay" class="logo">
+                    <img src="rizz_lines_generator-removebg-preview.png" alt="" class="logo">
                 </nav>
-                <h1>Free Tinder Bios & Dating Bios AI Generator</h1>
-                <h2>Create an attractive dating profile in 3 seconds</h2>
+                <h1>Fresh and Flirty Rizz Lines for Every Moment</h1>
+                <h2>Catchy Rizz Lines Just a Click Away</h2>
                 <div class="main_content">
                     <ul>
                         <li>this is me</li>
