--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2>Catchy Rizz Lines Just a Click Away</h2>
                 <div class="main_content">
                     <ul>
-                        <li>this is me</li>
+                        <li>Click the button below to generate your perfect pickup line! 👀👇</li>
                     </ul>
                     <div class="btn">
                     <button class="btn1">Normal line</button>
